# delegation-strategy-2

./: .editorconfig  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  api.md  blacklist.csv  deny.toml  glossary-additions.md  glossary.md  mnde_votes_snapshot.json  package.json  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: cargo-lint.yml  lint-and-test.yml  trivy-scan.yaml  trivy-update-cache.yaml
.husky/: clippy.sh  pre-commit
api/: Cargo.toml  README.md
api/src/: api_docs.rs  cache.rs  context.rs  main.rs  metrics.rs  redis_cache.rs  redis_context.rs  utils.rs
api/src/handlers/: admin_score_upload.rs  cluster_stats.rs  commissions.rs  config.rs  docs.rs  epochs.rs  events.rs  global_unstake_hints.rs  glossary.rs  jito.rs  jito_mev.rs  jito_priority_fee.rs  list_validators.rs  mev.rs  mnde_gauges.rs  mod.rs  reports_commission_changes.rs  reports_scoring.rs  reports_scoring_html.rs  reports_staking.rs  rewards.rs  stakers.rs  unstake_hints.rs  uptimes.rs  validator_score_breakdown.rs  validator_score_breakdowns.rs  validator_scores.rs  validators_block_rewards.rs  validators_flat.rs  versions.rs  workflow_metrics_upload.rs
check/: Cargo.toml  README.md
check/src/: lib.rs  main.rs  validators_block_rewards.rs  validators_jito.rs  validators_mev.rs
collect/: Cargo.toml  README.md
collect/src/: cluster_info.rs  common.rs  lib.rs  main.rs  marinade_service.rs  mnde_gauges.rs  solana_service.rs  validators.rs  validators_block_rewards.rs  validators_events.rs  validators_jito.rs  validators_mev.rs  validators_performance.rs  validators_stakers.rs  whois_service.rs
migrations/: 0000-init.sql  0002-scores.sql  0003-scores-with-ranks.sql  0004-vote-account-data.sql  0005-scores-component-values.sql  0006-scores-mnde-votes.sql  0007-scores-msol-votes.sql  0008-foundation-stake.sql  0009-self-stake.sql  0010-native-stake.sql  0011-indexes.sql  0012-institutional-stake.sql  0012-mev-not-null.sql  0013-migrations-fix.sql  0014-jito-priority-fee.sql  0015-validator-info-icon-url.sql  0016-block-rewards.sql  0017-cluster-nodes-fields.sql  0017-stakers.sql  0018-events.sql
scripts/: check-collect-store-jito.bash  check-collect-store-validators-block-rewards.bash  check-validators-block-rewards.bash  check-validators-jito.bash  check-validators-mev.bash  collect-validators-block-rewards.bash  collect-validators-jito.bash  collect-validators-mev.bash  collect-validators-performance-last-epoch.bash  collect-validators-performance.bash  collect-validators-snapshot-complete.bash  collect-validators-snapshot-simple.bash  collect-validators-snapshot.bash  launch-api.bash  scoring-fetch-inputs.bash  scoring-install.bash  scoring-report.Rmd  scoring-report.bash  scoring-run.bash  scoring-summary.Rmd  scoring-summary.bash  scoring.R  scoring.Rmd  store-cluster-info.bash  store-commissions.bash  store-finalized-performance.bash  store-ls-open-epochs.bash  store-quick-changes.bash  store-uptimes.bash  store-validators-block-rewards.bash  store-validators-jito.bash  store-validators-mev.bash  store-validators.bash  store-versions.bash
store/: Cargo.toml  README.md
store/src/: close_epoch.rs  cluster_info.rs  commissions.rs  dto.rs  epochs.rs  lib.rs  ls_open_epochs.rs  main.rs  rewards.rs  scoring.rs  uptime.rs  utils.rs  validators.rs  validators_block_rewards.rs  validators_events.rs  validators_jito.rs  validators_mev.rs  validators_stakers.rs  versions.rs
