[workspace]
members = [
    "api",
    "collect",
    "store",
    "check",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies used across multiple crates
anyhow = "1.0.100"
log = "0.4.28"
env_logger = "0.11.8"
structopt = "0.3.26"
rust_decimal = { version = "1.26", features = ["db-postgres"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
bincode = "1.3.3"
reqwest = "0.11.27"
chrono = "=0.4.39"
openssl = "0.10.70"
postgres-openssl = "0.5.1"
borsh = "1.5"
csv = "1.1"
utoipa = { version = "3.2.1", features = ["chrono", "decimal"] }
solana-client = "2.2.20"
solana-program = "2.2.1"
validator = { version = "0.20.0", features = ["derive"] }

# API-specific dependencies
bytes = "1.0"
futures = { version = "0.3", default-features = false }
warp = "0.3"
prometheus = "0.13.3"
lazy_static = "1.4.0"
regex = "1.7.2"

# Store-specific dependencies
redis-macros = "0.1.0"
redis = { version = "0.23.0", features = ["json"] }

# Collect-specific dependencies
solana-vote-program = "2.2.20"
solana-sdk = "2.2.2"
solana-account-decoder = "2.2.20"
solana-config-program = "2.2.20"
solana-commitment-config = "2.2.1"
anchor-lang = "^0.31.1"
jito-tip-distribution = { git = "https://github.com/jito-foundation/jito-programs", rev = "8f55af0a9b31ac2192415b59ce2c47329ee255a2", features = ["no-entrypoint"] }
jito-priority-fee-distribution = { git = "https://github.com/jito-foundation/jito-programs", rev = "8f55af0a9b31ac2192415b59ce2c47329ee255a2", features = ["no-entrypoint"] }
google-cloud-bigquery = "0.15"
