[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { workspace = true }
anyhow = { workspace = true }
borsh = { workspace = true }
csv = { workspace = true }
log = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
env_logger = { workspace = true }
structopt = { workspace = true }
solana-program = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
tokio-postgres = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
store = { path = "../store" }
chrono = { workspace = true }
tokio = { workspace = true }
warp = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
utoipa = { workspace = true }
