[package]
name = "check"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
collect = { path = "../collect" }
log = "0.4.14"
env_logger = "0.9.0"
rust_decimal = { version = "1.26", features = ["db-postgres"] }
solana-client = "1.16"
structopt = "0.3.21"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
tokio = { version = "1", features = ["full"] }
