[package]
name = "collect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
borsh = "1.5"
log = "0.4.14"
env_logger = "0.9.0"
structopt = "0.3.21"
solana-client = "1.16"
solana-vote-program = "1.16"
rust_decimal = { version = "1.26", features = ["db-postgres"] }
solana-sdk = "1.16"
solana-program = "1.16"
solana-account-decoder = "1.16"
solana-config-program = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
anchor-lang = "^0.28.0"
bincode = "1.3.3"
reqwest = "0.11.11"
chrono = "0.4"
jito-tip-distribution = { git = "https://github.com/jito-foundation/jito-programs", commit = "68789c76d7b62e828a23ae106362fc070c43458a" }
