[package]
name = "collect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
structopt = { workspace = true }
solana-client = { workspace = true }
solana-vote-program = { workspace = true }
rust_decimal = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-account-decoder = { workspace = true }
solana-config-program = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anchor-lang = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
jito-tip-distribution = { workspace = true }
jito-priority-fee-distribution = { workspace = true }
