[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.26", features = ["db-postgres"] }
redis-macros = "0.1.0"
redis = { version = "0.23.0", features = ["json"] }
anyhow = "1.0.40"
borsh = "0.9"
log = "0.4.14"
env_logger = "0.9.0"
structopt = "0.3.21"
solana-client = "1.10.41"
solana-sdk = "1.10.41"
solana-program = "1.10.41"
solana-account-decoder = "1.10.41"
solana-config-program = "1.10.41"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
anchor-lang = "0.25.0"
num = "0.4.0"
bincode = "1.3.3"
reqwest = "0.11.11"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
tokio = { version = "1", features = ["full"] }
collect = { path = "../collect" }
chrono = "0.4"
csv = "1.1"
utoipa = { version = "3.2.1", features = ["chrono", "decimal"] }
