[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.26", features = ["db-postgres"] }
redis-macros = "0.1.0"
redis = { version = "0.23.0", features = ["json"] }
anyhow = "1.0.40"
borsh = "1.3"
log = "0.4.14"
env_logger = "0.9.0"
structopt = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
bincode = "1.3.3"
reqwest = "0.11.11"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
openssl = "0.10.70"
postgres-openssl = "0.5.1"
tokio = { version = "1", features = ["full"] }
collect = { path = "../collect" }
chrono = "0.4"
csv = "1.1"
utoipa = { version = "3.2.1", features = ["chrono", "decimal"] }
