[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { workspace = true }
redis-macros = { workspace = true }
redis = { workspace = true }
anyhow = { workspace = true }
borsh = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
structopt = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true }
tokio-postgres = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
tokio = { workspace = true }
collect = { path = "../collect" }
chrono = { workspace = true }
csv = { workspace = true }
utoipa = { workspace = true }
